Updates example theme for RW6 theme syntax.

--- a/Blank Theme.rwtheme/Contents/index.html
+++ b/Blank Theme.rwtheme/Contents/index.html
@@ -33,7 +33,7 @@
 	
 	<div id="sidebarContainer"><!-- Start Sidebar wrapper -->
 		<div id="navcontainer"><!-- Start Navigation -->
-			%toolbar%
+			%navigation%
 		</div><!-- End navigation --> 
 		<div class="sideHeader">%sidebar_title%</div><!-- Sidebar header -->
 		<div id="sidebar"><!-- Start sidebar content -->
