--- a/Blank Theme.rapidweavertheme/Contents/index.html
+++ b/Blank Theme.rapidweavertheme/Contents/index.html
@@ -4,6 +4,7 @@
 		%header%<!-- User defined head content such as meta tags and encoding options -->
 		<title>%title%</title>
 		<link rel="stylesheet" type="text/css" media="screen" href="%pathto(styles.css)%"  />
+		<link rel="stylesheet" type="text/css" media="screen" href="%pathto(colourtag.css)%"  />
 		<link rel="stylesheet" type="text/css" media="print" href="%pathto(print.css)%"  />
 		<link rel="stylesheet" type="text/css" media="handheld" href="%pathto(handheld.css)%"  />
 		%style_variations%<!-- Style variations - these are set up in the theme.plist -->
