--- a/Bootstrap Theme/Bootstrap Theme.rapidweavertheme/Contents/index.html
+++ b/Bootstrap Theme/Bootstrap Theme.rapidweavertheme/Contents/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		%header%
 		<title>%title%</title>
+	
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 		<link rel="stylesheet" type="text/css" media="screen" href="%pathto(styles.css)%"  />
@@ -36,7 +37,11 @@
 			%content%
 		</div>
 	</div>
+
+	<footer>
+		<p>%footer%</p>
+	</footer>
 </div>
-	
+
   </body>
 </html>
